--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js",
-    "deploy": "node src/deploy.js"
+    "start": "cls && node build/index.js",
+    "deploy": "cls && node build/deploy.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
     "discord.js": "^14.12.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "eslint": "^8.46.0"
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.4.6",
+    "eslint": "^8.46.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
