--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.17",
     "axios": "^1.4.0",
+    "chalk": "^4.1.2",
     "discord.js": "^14.12.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
     "@types/node": "^20.4.6",
     "eslint": "^8.46.0",
-    "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
 }
