--- a/package.json
+++ b/package.json
@@ -7,17 +7,23 @@
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node build/index.js",
-    "deploy": "node build/deploy.js"
+    "remove": "node build/removeCommands.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mikro-orm/cli": "^6.2.2",
+    "@mikro-orm/core": "^6.2.2",
+    "@mikro-orm/migrations": "^6.2.2",
+    "@mikro-orm/postgresql": "^6.2.2",
+    "@mikro-orm/reflection": "^6.2.2",
     "@types/express": "^4.17.17",
     "axios": "^1.4.0",
     "chalk": "^4.1.2",
     "discord.js": "^14.12.1",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "typescript-guid": "^1.0.3"
   },
   "devDependencies": {
     "@types/node": "^20.4.6",
