--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "compile": "graphql-codegen",
+    "watch": "graphql-codegen -w",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node build/index.js",
@@ -12,12 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@mikro-orm/cli": "^6.2.2",
     "@mikro-orm/core": "^6.2.2",
     "@mikro-orm/migrations": "^6.2.2",
     "@mikro-orm/postgresql": "^6.2.2",
     "@mikro-orm/reflection": "^6.2.2",
     "@types/express": "^4.17.17",
+    "@urql/core": "^5.0.4",
     "axios": "^1.4.0",
     "chalk": "^4.1.2",
     "discord.js": "^14.12.1",
@@ -26,8 +30,11 @@
     "typescript-guid": "^1.0.3"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/client-preset": "^4.3.2",
     "@types/node": "^20.4.6",
     "eslint": "^8.46.0",
-    "typescript": "^5.1.6"
+    "graphql": "^16.9.0",
+    "typescript": "^5.5.4"
   }
 }
