--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@graphql-typed-document-node/core": "^3.2.0",
+    "@langchain/ollama": "^0.0.4",
     "@mikro-orm/cli": "^6.2.2",
     "@mikro-orm/core": "^6.2.2",
     "@mikro-orm/migrations": "^6.2.2",
@@ -27,6 +28,7 @@
     "discord.js": "^14.12.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "langchain": "^0.2.16",
     "typescript-guid": "^1.0.3"
   },
   "devDependencies": {
