--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@mikro-orm/migrations": "^6.2.2",
     "@mikro-orm/postgresql": "^6.2.2",
     "@mikro-orm/reflection": "^6.2.2",
+    "@types/amqplib": "^0.10.5",
     "@types/express": "^4.17.17",
     "@urql/core": "^5.0.4",
+    "amqplib": "^0.10.4",
     "axios": "^1.4.0",
     "chalk": "^4.1.2",
     "discord.js": "^14.12.1",
