--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@graphql-typed-document-node/core": "^3.2.0",
+    "@langchain/core": "^0.3.7",
     "@langchain/ollama": "^0.0.4",
     "@mikro-orm/cli": "^6.3.9",
     "@mikro-orm/core": "^6.2.2",
@@ -30,7 +31,8 @@
     "discord.js": "^14.16.1",
     "dotenv": "^16.3.1",
     "express": "^5.0.0",
-    "langchain": "^0.2.18",
+    "langchain": "^0.3.2",
+    "npm-check-updates": "^17.1.3",
     "typescript-guid": "^1.0.3"
   },
   "devDependencies": {
