--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "@graphql-typed-document-node/core": "^3.2.0",
-    "@langchain/core": "^0.3.7",
+    "@langchain/community": "^0.3.4",
+    "@langchain/core": "^0.2.35",
     "@langchain/ollama": "^0.0.4",
     "@mikro-orm/cli": "^6.3.9",
     "@mikro-orm/core": "^6.2.2",
@@ -24,6 +25,7 @@
     "@mikro-orm/reflection": "^6.3.9",
     "@types/amqplib": "^0.10.5",
     "@types/express": "^4.17.21",
+    "@types/pg": "^8.11.10",
     "@urql/core": "^5.0.6",
     "amqplib": "^0.10.4",
     "axios": "^1.7.7",
@@ -33,7 +35,10 @@
     "express": "^5.0.0",
     "langchain": "^0.3.2",
     "npm-check-updates": "^17.1.3",
-    "typescript-guid": "^1.0.3"
+    "pg": "^8.13.0",
+    "puppeteer": "^23.5.1",
+    "typescript-guid": "^1.0.3",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
