--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/voice": "^0.18.0",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@langchain/community": "^0.3.4",
     "@langchain/core": "^0.2.35",
@@ -33,17 +34,21 @@
     "discord.js": "^14.16.1",
     "dotenv": "^16.3.1",
     "express": "^5.0.0",
+    "ffmpeg-static": "^5.2.0",
+    "fs": "^0.0.1-security",
     "langchain": "^0.3.2",
     "npm-check-updates": "^17.1.3",
     "pg": "^8.13.0",
     "puppeteer": "^23.5.1",
     "typescript-guid": "^1.0.3",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "wav": "^1.0.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/client-preset": "^4.3.3",
     "@types/node": "^20.16.5",
+    "@types/wav": "^1.0.4",
     "eslint": "^8.57.0",
     "graphql": "^16.9.0",
     "typescript": "^5.6.2"
