--- a/package.json
+++ b/package.json
@@ -13,44 +13,47 @@
   },
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "@discordjs/voice": "^0.18.0",
     "@graphql-typed-document-node/core": "^3.2.0",
-    "@langchain/community": "^0.3.4",
-    "@langchain/core": "^0.2.35",
-    "@langchain/ollama": "^0.0.4",
-    "@mikro-orm/cli": "^6.3.9",
-    "@mikro-orm/core": "^6.2.2",
-    "@mikro-orm/migrations": "^6.3.9",
-    "@mikro-orm/postgresql": "^6.3.9",
-    "@mikro-orm/reflection": "^6.3.9",
-    "@types/amqplib": "^0.10.5",
-    "@types/express": "^4.17.21",
-    "@types/pg": "^8.11.10",
-    "@urql/core": "^5.0.6",
-    "amqplib": "^0.10.4",
-    "axios": "^1.7.7",
-    "chalk": "^4.1.2",
-    "discord.js": "^14.16.1",
-    "dotenv": "^16.3.1",
+    "@langchain/community": "^0.3.27",
+    "@langchain/core": "^0.3.37",
+    "@langchain/ollama": "^0.1.5",
+    "@mikro-orm/cli": "^6.4.4",
+    "@mikro-orm/core": "^6.4.4",
+    "@mikro-orm/migrations": "^6.4.4",
+    "@mikro-orm/postgresql": "^6.4.4",
+    "@mikro-orm/reflection": "^6.4.4",
+    "@types/amqplib": "^0.10.6",
+    "@types/express": "^5.0.0",
+    "@types/pg": "^8.11.11",
+    "@urql/core": "^5.1.0",
+    "amqplib": "^0.10.5",
+    "axios": "^1.7.9",
+    "chalk": "^5.4.1",
+    "discord.js": "^14.17.3",
+    "dotenv": "^16.4.7",
     "express": "^5.0.0",
     "ffmpeg-static": "^5.2.0",
     "fs": "^0.0.1-security",
-    "langchain": "^0.3.2",
-    "npm-check-updates": "^17.1.3",
-    "pg": "^8.13.0",
-    "puppeteer": "^23.5.1",
+    "langchain": "^0.3.14",
+    "npm-check-updates": "^17.1.14",
+    "openai": "^4.80.1",
+    "pg": "^8.13.1",
+    "puppeteer": "^24.1.1",
     "typescript-guid": "^1.0.3",
-    "uuid": "^10.0.0",
+    "uuid": "^11.0.5",
     "wav": "^1.0.2"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^5.0.2",
-    "@graphql-codegen/client-preset": "^4.3.3",
-    "@types/node": "^20.16.5",
+    "@graphql-codegen/cli": "^5.0.4",
+    "@graphql-codegen/client-preset": "^4.6.0",
+    "@types/node": "^22.12.0",
     "@types/wav": "^1.0.4",
-    "eslint": "^8.57.0",
-    "graphql": "^16.9.0",
-    "typescript": "^5.6.2"
+    "@types/ws": "^8.5.14",
+    "eslint": "^9.19.0",
+    "graphql": "^16.10.0",
+    "typescript": "^5.7.3"
   }
 }
