Add MongoDB integration and refactor dbHelper importsö pubh player comparison

--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
   "dependencies": {
     "@discordjs/voice": "^0.18.0",
     "@graphql-typed-document-node/core": "^3.2.0",
-    "@langchain/community": "^0.3.27",
+    "@langchain/community": "^0.3.28",
     "@langchain/core": "^0.3.37",
     "@langchain/ollama": "^0.1.5",
-    "@mikro-orm/cli": "^6.4.4",
-    "@mikro-orm/core": "^6.4.4",
-    "@mikro-orm/migrations": "^6.4.4",
-    "@mikro-orm/postgresql": "^6.4.4",
-    "@mikro-orm/reflection": "^6.4.4",
+    "@mikro-orm/cli": "^6.4.5",
+    "@mikro-orm/core": "^6.4.5",
+    "@mikro-orm/migrations": "^6.4.5",
+    "@mikro-orm/postgresql": "^6.4.5",
+    "@mikro-orm/reflection": "^6.4.5",
     "@types/amqplib": "^0.10.6",
     "@types/express": "^5.0.0",
     "@types/pg": "^8.11.11",
@@ -36,9 +36,10 @@
     "dotenv": "^16.4.7",
     "express": "^5.0.0",
     "ffmpeg-static": "^5.2.0",
-    "langchain": "^0.3.14",
+    "langchain": "^0.3.15",
+    "mongodb": "^6.13.0",
     "npm-check-updates": "^17.1.14",
-    "openai": "^4.80.1",
+    "openai": "^4.82.0",
     "pg": "^8.13.1",
     "puppeteer": "^24.1.1",
     "typescript-guid": "^1.0.3",
@@ -47,8 +48,8 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.4",
-    "@graphql-codegen/client-preset": "^4.6.0",
-    "@types/node": "^22.12.0",
+    "@graphql-codegen/client-preset": "^4.6.1",
+    "@types/node": "^22.13.0",
     "@types/wav": "^1.0.4",
     "@types/ws": "^8.5.14",
     "eslint": "^9.19.0",
