--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "openai": "^4.82.0",
     "pg": "^8.13.1",
     "puppeteer": "^24.1.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "typescript-guid": "^1.0.3",
     "uuid": "^11.0.5",
     "wav": "^1.0.2"
@@ -51,6 +53,8 @@
     "@graphql-codegen/cli": "^5.0.4",
     "@graphql-codegen/client-preset": "^4.6.1",
     "@types/node": "^22.13.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.7",
     "@types/wav": "^1.0.4",
     "@types/ws": "^8.5.14",
     "eslint": "^9.19.0",
