Migrate from MikroORM to Prisma and update database schema for channel messages and presence logs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -100,6 +100,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
 },
-"include":["./src/**/*", "./src/**/*.ts", "mikro-orm.config.ts"],
+"include":["./src/**/*", "./src/**/*.ts"],
 "exclude":["node_modules"]
 }  
