--- a/package.json
+++ b/package.json
@@ -22,10 +22,7 @@
     "@langchain/core": "^0.3.39",
     "@langchain/ollama": "^0.1.6",
     "@mikro-orm/cli": "^6.4.5",
-    "@mikro-orm/core": "^6.4.5",
-    "@mikro-orm/migrations": "^6.4.5",
-    "@mikro-orm/postgresql": "^6.4.5",
-    "@mikro-orm/reflection": "^6.4.5",
+    "@prisma/client": "^6.3.1",
     "@types/amqplib": "^0.10.6",
     "@types/express": "^5.0.0",
     "@types/pg": "^8.11.11",
@@ -58,6 +55,7 @@
     "@types/ws": "^8.5.14",
     "eslint": "^9.20.0",
     "graphql": "^16.10.0",
+    "prisma": "^6.3.1",
     "typescript": "^5.7.3"
   }
 }
