--- a/package.json
+++ b/package.json
@@ -16,47 +16,49 @@
   "type": "module",
   "dependencies": {
     "@discordjs/voice": "^0.18.0",
-    "@distube/ytdl-core": "^4.16.4",
+    "@distube/ytdl-core": "^4.16.10",
     "@graphql-typed-document-node/core": "^3.2.0",
-    "@langchain/community": "^0.3.34",
-    "@langchain/core": "^0.3.42",
+    "@langchain/community": "^0.3.45",
+    "@langchain/core": "^0.3.57",
     "@langchain/ollama": "^0.2.0",
-    "@mikro-orm/cli": "^6.4.9",
-    "@prisma/client": "^6.5.0",
+    "@mikro-orm/cli": "^6.4.16",
+    "@prisma/client": "^6.8.2",
     "@types/amqplib": "^0.10.7",
-    "@types/express": "^5.0.0",
-    "@types/pg": "^8.11.11",
+    "@types/express": "^5.0.2",
+    "@types/pg": "^8.15.2",
     "@urql/core": "^5.1.1",
-    "amqplib": "^0.10.5",
-    "axios": "^1.8.3",
+    "amqplib": "^0.10.8",
+    "axios": "^1.9.0",
     "chalk": "^5.4.1",
-    "discord.js": "^14.18.0",
-    "dotenv": "^16.4.7",
-    "elevenlabs": "^1.54.0",
-    "express": "^5.0.0",
+    "discord.js": "^14.19.3",
+    "dotenv": "^16.5.0",
+    "elevenlabs": "^1.59.0",
+    "express": "^5.1.0",
     "ffmpeg-static": "^5.2.0",
-    "langchain": "^0.3.19",
-    "mongodb": "^6.14.2",
-    "npm-check-updates": "^17.1.15",
-    "openai": "^4.87.3",
-    "pg": "^8.14.0",
+    "langchain": "^0.3.27",
+    "mongodb": "^6.16.0",
+    "npm-check-updates": "^18.0.1",
+    "openai": "^4.62.1",
+    "pg": "^8.16.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "typescript-guid": "^1.0.3",
+    "undici": ">=7.10.0",
     "uuid": "^11.1.0",
     "wav": "^1.0.2"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^5.0.5",
-    "@graphql-codegen/client-preset": "^4.7.0",
-    "@types/node": "^22.13.10",
+    "@graphql-codegen/cli": "^5.0.6",
+    "@graphql-codegen/client-preset": "^4.8.1",
+    "@types/node": "^22.15.29",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/wav": "^1.0.4",
-    "@types/ws": "^8.18.0",
-    "eslint": "^9.22.0",
-    "graphql": "^16.10.0",
-    "prisma": "^6.5.0",
-    "typescript": "^5.8.2"
+    "@types/ws": "^8.18.1",
+    "eslint": "^9.28.0",
+    "graphql": "^16.11.0",
+    "prisma": "^6.8.2",
+    "undici": ">=7.10.0",
+    "typescript": "^5.8.3"
   }
 }
