--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@discordjs/rest": "^2.6.0",
     "@discordjs/voice": "^0.18.0",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@mikro-orm/cli": "^6.4.16",
