--- a/package.json
+++ b/package.json
@@ -9,52 +9,52 @@
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node build/index.js",
-    "remove": "node build/removeCommands.js"
+    "remove": "node build/admin/delete-all-commands.js"
   },
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
     "@discordjs/rest": "^2.6.0",
-    "@discordjs/voice": "^0.18.0",
+    "@discordjs/voice": "^0.19.0",
+    "@elevenlabs/elevenlabs-js": "^2.28.0",
     "@graphql-typed-document-node/core": "^3.2.0",
-    "@mikro-orm/cli": "^6.4.16",
-    "@prisma/client": "^6.13.0",
-    "@types/amqplib": "^0.10.7",
-    "@types/express": "^5.0.3",
-    "@types/pg": "^8.15.5",
-    "@urql/core": "^5.2.0",
-    "amqplib": "^0.10.8",
-    "axios": "^1.11.0",
-    "chalk": "^5.4.1",
-    "discord.js": "^14.21.0",
-    "dotenv": "^16.6.1",
-    "elevenlabs": "^1.59.0",
-    "express": "^5.1.0",
-    "ffmpeg-static": "^5.2.0",
-    "mongodb": "^6.18.0",
-    "npm-check-updates": "^18.0.2",
-    "openai": "^4.104.0",
+    "@mikro-orm/cli": "^6.6.2",
+    "@prisma/client": "^7.2.0",
+    "@types/amqplib": "^0.10.8",
+    "@types/express": "^5.0.6",
+    "@types/pg": "^8.16.0",
+    "@urql/core": "^6.0.1",
+    "amqplib": "^0.10.9",
+    "axios": "^1.13.2",
+    "chalk": "^5.6.2",
+    "discord.js": "^14.25.1",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "ffmpeg-static": "^5.3.0",
+    "mongodb": "^7.0.0",
+    "npm-check-updates": "^19.2.1",
+    "openai": "^6.15.0",
     "pg": "^8.16.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "typescript-guid": "^1.0.3",
-    "undici": ">=7.13.0",
-    "uuid": "^11.1.0",
+    "undici": "^7.16.0",
+    "uuid": "^13.0.0",
     "wav": "^1.0.2"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^5.0.7",
-    "@graphql-codegen/client-preset": "^4.8.3",
-    "@types/node": "^24.1.0",
+    "@graphql-codegen/cli": "^6.1.0",
+    "@graphql-codegen/client-preset": "^5.2.2",
+    "@types/node": "^25.0.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/wav": "^1.0.4",
     "@types/ws": "^8.18.1",
-    "eslint": "^9.32.0",
-    "graphql": "^16.11.0",
-    "prisma": "^6.13.0",
-    "typescript": "^5.9.2",
+    "eslint": "^9.39.2",
+    "graphql": "^16.12.0",
+    "prisma": "^7.2.0",
+    "typescript": "^5.9.3",
     "undici": ">=7.13.0"
   }
 }
